test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_contract_configurable/stdout.snap
---
source: test/src/snapshot/mod.rs
---
> forc build --path test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_contract_configurable
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_contract_configurable
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
DIFF------------------------------
.program:
   Compiling contract attributes_invalid_target_contract_configurable (test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_contract_configurable)
error: Attribute cannot annotate item
 --> test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_contract_configurable/src/main.sw:3:3
  |
...
3 | #[storage(invalid)]
  |   ^^^^^^^ "storage" attribute cannot annotate a configurable declaration.
  |
  = help: "storage" attribute can only annotate functions.
____

error: Attribute cannot annotate item
 --> test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_contract_configurable/src/main.sw:4:3
  |
...
4 | #[inline(invalid)]
  |   ^^^^^^ "inline" attribute cannot annotate a configurable declaration.
  |
  = help: "inline" attribute can only annotate functions.
____

error: Attribute cannot annotate item
 --> test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_contract_configurable/src/main.sw:5:3
  |
...
5 | #[trace(invalid)]
  |   ^^^^^ "trace" attribute cannot annotate a configurable declaration.
  |
  = help: "trace" attribute can only annotate functions.
____

error: Attribute cannot annotate item
 --> test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_contract_configurable/src/main.sw:6:3
  |
...
6 | #[test(invalid)]
  |   ^^^^ "test" attribute cannot annotate a configurable declaration.
  |
  = help: "test" attribute can only annotate module functions.
____

error: Inner doc comment (`//!`) cannot document item
 --> test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_contract_configurable/src/main.sw:7:1
  |
...
7 | //! Invalid inner comment.
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ Inner doc comment (`//!`) cannot document a configurable declaration.
  |
  = help: Inner doc comments (`//!`) can only document modules and must be
  = help: at the beginning of the module file, before the module kind.
____

error: Attribute cannot annotate item
 --> test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_contract_configurable/src/main.sw:8:3
  |
...
8 | #[payable(invalid)]
  |   ^^^^^^^ "payable" attribute cannot annotate a configurable declaration.
  |
  = help: "payable" attribute can only annotate:
  = help:   - ABI function signatures and their implementations in contracts,
  = help:   - provided ABI functions.
____

error: Attribute cannot annotate item
 --> test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_contract_configurable/src/main.sw:9:3
  |
...
9 | #[deprecated(invalid)]
  |   ^^^^^^^^^^ "deprecated" attribute cannot annotate a configurable declaration.
  |
  = help: "deprecated" attribute is currently not implemented for all elements that could be deprecated.
____

error: Attribute cannot annotate item
  --> test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_contract_configurable/src/main.sw:10:3
   |
...
10 | #[fallback(invalid)]
   |   ^^^^^^^^ "fallback" attribute cannot annotate a configurable declaration.
   |
   = help: "fallback" attribute can only annotate module functions in a contract module.
____

error: Attribute cannot annotate item
  --> test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_contract_configurable/src/main.sw:11:3
   |
...
11 | #[error_type(invalid)]
   |   ^^^^^^^^^^ "error_type" attribute cannot annotate a configurable declaration.
   |
   = help: "error_type" attribute can only annotate enums.
____

error: Attribute cannot annotate item
  --> test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_contract_configurable/src/main.sw:12:3
   |
...
12 | #[error(invalid)]
   |   ^^^^^ "error" attribute cannot annotate a configurable declaration.
   |
   = help: "error" attribute can only annotate enum variants of enums annotated with the "error_type" attribute.
____

error: Attribute cannot annotate item
  --> test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_contract_configurable/src/main.sw:14:7
   |
...
14 |     #[storage(invalid)]
   |       ^^^^^^^ "storage" attribute cannot annotate a configurable field.
   |
   = help: "storage" attribute can only annotate functions.
____

error: Attribute cannot annotate item
  --> test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_contract_configurable/src/main.sw:15:7
   |
...
15 |     #[inline(invalid)]
   |       ^^^^^^ "inline" attribute cannot annotate a configurable field.
   |
   = help: "inline" attribute can only annotate functions.
____

error: Attribute cannot annotate item
  --> test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_contract_configurable/src/main.sw:16:7
   |
...
16 |     #[trace(invalid)]
   |       ^^^^^ "trace" attribute cannot annotate a configurable field.
   |
   = help: "trace" attribute can only annotate functions.
____

error: Attribute cannot annotate item
  --> test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_contract_configurable/src/main.sw:17:7
   |
...
17 |     #[test(invalid)]
   |       ^^^^ "test" attribute cannot annotate a configurable field.
   |
   = help: "test" attribute can only annotate module functions.
____

error: Inner doc comment (`//!`) cannot document item
  --> test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_contract_configurable/src/main.sw:18:5
   |
...
18 |     //! Invalid inner comment.
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ Inner doc comment (`//!`) cannot document a configurable field.
   |
   = help: Inner doc comments (`//!`) can only document modules and must be
   = help: at the beginning of the module file, before the module kind.
____

error: Attribute cannot annotate item
  --> test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_contract_configurable/src/main.sw:19:7
   |
...
19 |     #[payable(invalid)]
   |       ^^^^^^^ "payable" attribute cannot annotate a configurable field.
   |
   = help: "payable" attribute can only annotate:
   = help:   - ABI function signatures and their implementations in contracts,
   = help:   - provided ABI functions.
____

error: Attribute cannot annotate item
  --> test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_contract_configurable/src/main.sw:20:7
   |
...
20 |     #[fallback(invalid)]
   |       ^^^^^^^^ "fallback" attribute cannot annotate a configurable field.
   |
   = help: "fallback" attribute can only annotate module functions in a contract module.
____

error: Attribute cannot annotate item
  --> test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_contract_configurable/src/main.sw:21:7
   |
...
21 |     #[error_type(invalid)]
   |       ^^^^^^^^^^ "error_type" attribute cannot annotate a configurable field.
   |
   = help: "error_type" attribute can only annotate enums.
____

error: Attribute cannot annotate item
  --> test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_contract_configurable/src/main.sw:22:7
   |
...
22 |     #[error(invalid)]
   |       ^^^^^ "error" attribute cannot annotate a configurable field.
   |
   = help: "error" attribute can only annotate enum variants of enums annotated with the "error_type" attribute.
____

  Aborting due to 19 errors.
error: Failed to compile attributes_invalid_target_contract_configurable
